--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 						<li>
 							<a class= "comLink" href="javascript:;" onclick="despliegaContenido(3, 'ejemplo3', 3);"><span class="menu_home">CONTENIDO 3</span></a>
 						</li>
+						<li>
+							<a class= "comLink" href="javascript:;" onclick="despliegaContenido(4, 'ejemplo4', 4);"><span class="menu_home">CONTENIDO 4</span></a>
+						</li>
+						
 					</ul>
 				</nav>
 			</div>
